--- a/Paper/document.tex
+++ b/Paper/document.tex
@@ -370,7 +370,7 @@ Tanguay \cite{tanguay_jr_hidden_1995} in his thesis, has performed identificatio
 
 Since Tanguay does not recognize multiple gestures in a gesture sequence, we compare our results with that of Yang et al \cite{yang_gesture_1994}. Although they do not mention results for gesture sequences of length 3, they report a really high accuracy rate of upto 99.78\%. Our results from Table 1 are much less impressive, as we were only able to get 50\% accuracy. However there are certain key differences in both the approaches. Yang et al train Hidden Markov models for both individual gestures as well as for all possible 2-gesture combinations. Moreover, their gesture set is restricted to the numerals 0-9. Hence in the recognition phase of their approach, they simply pass the raw input to each of the available HMMs and the gesture(s) corresponding to the model that gives the highest probability is selected.
 
-From our work we have learnt that the dynamic time warping approach is a good alternative to HMMs in problem such as gesture recognition; more so if computational power is a constraint. However there is potential for further research and work to be done in this field. An immediate work for the future is to be able to carry forward our assumption about a restricted set of input gestures and implement it. It would be worthwhile in investigating the performance measure of the system when the possible input sequence is made up of a finite ``alphabet''. Also, given sufficient computational horsepower, it would be interesting to construct HMMs for gesture sequences of varying lengths, say upto 5, using the chaining approach and compare the results with those that we have obtained. A fundamental constraint of our implementation is that the input needs to be constructed in one stroke, which does not give much leeway to the user constructing the gesture sequence. Another potential problem for the future is to extend this system, allowing the user to input gesture sequences in a more free-form manner using multiple strokes.
+From our work we have learnt that the dynamic time warping approach is a good alternative to HMMs in problems of gesture recognition; more so if computational power is a constraint. However there is potential for further research and work to be done in this field. An immediate work for the future is to be able to carry forward our assumption about a restricted set of input gestures and implement it. It would be worthwhile in investigating the performance measure of the system when the possible input sequence is made up of a finite ``alphabet''. Also, given sufficient computational horsepower, it would be interesting to construct HMMs for gesture sequences of varying lengths, say upto 5, using the chaining approach and compare the results with those that we have obtained. A fundamental constraint of our implementation is that the input needs to be constructed in one stroke, which does not give much leeway to the user constructing the gesture sequence. Another potential problem for the future is to extend this system, allowing the user to input gesture sequences in a more free-form manner using multiple strokes.
 
 %----------------------------------------------------------------------------------------
 \section{References}
