--- a/Paper/document.tex
+++ b/Paper/document.tex
@@ -346,7 +346,7 @@ Figure 4 is a plot of the variation of the recognition rate with respect to the 
 %------------------------------------------------
 \section{Discussion}
 
-From Tables 1,2 and 3 it is apparent that the method of progressively applying dynamic time warping over the input sequence of points gives fairly average results. It is clear that the process of geometric matching works much better for recognizing individual gestures than for gesture sequences. However, it is noteworthy to observe that our algorithm was able to segment the input sequence correctly, on an average, about 80\% of the time. There was no case where the user drew just one gesture and our system reported it to be more than one. This complete absence of a ``false positive'' is an encouraging sign, which leads us to believe that our segmentation routine is robust. Although the trials were conducted by only one person, we discovered that our system was fairly invariant to spatio-temporal factors. In such problems, author bias tends to play a big role, and hence we would have got a more complete picture had we been able to test it with multiple users. The results from Table 3 indicate that 75\% of the time the system is able to correctly recognize atleast one gesture in sequences of length greater than 1. This is a significant achievement considering how little training is required to get the system up-and-running.
+From Tables 1, 2 and 3 it is apparent that the method of progressively applying dynamic time warping over the input sequence of points gives fairly average results. It is clear that the process of geometric matching works much better for recognizing individual gestures than for gesture sequences. However, it is noteworthy to observe that our algorithm was able to segment the input sequence correctly, on an average, about 80\% of the time. There was no case where the user drew just one gesture and our system reported it to be more than one. This complete absence of a ``false positive'' is an encouraging sign, which leads us to believe that our segmentation routine is robust. Although the trials were conducted by only one person, we discovered that our system was fairly invariant to spatio-temporal factors. In such problems, author bias tends to play a big role, and hence we would have got a more complete picture had we been able to test it with multiple users. The results from Table 3 indicate that 75\% of the time the system is able to correctly recognize atleast one gesture in sequences of length greater than 1. This is a significant achievement considering how little training is required to get the system up-and-running.
 
 From Figure 2 it is possible to obtain gestures which are ``easily recognizable'' or in other words ``easily distinguishable'' from one another (by simply picking out the gestures with the highest recognition rates). 
 %Confusion matrix
