Final draft. Details of what we coded added to the README.

--- a/Paper/myrefs.bib
+++ b/Paper/myrefs.bib
@@ -120,4 +120,22 @@
   pages = {159--168},
   year = {2007},
   organization = {ACM}
+},
+
+@article{pizlo_perception_2001,
+	title = {Perception viewed as an inverse problem},
+	volume = {41},
+	issn = {0042-6989},
+	url = {http://www.sciencedirect.com/science/article/pii/S0042698901001730},
+	doi = {10.1016/S0042-6989(01)00173-0},
+	abstract = {The modern study of perception began when Fechner published his {‘Elements} of Psychophysics’ in 1860. This book has guided most perception research ever since. It has become increasingly clear that there are problems with Fechner's approach, which assumes that the percept is completely determined by the sensory input. Fechner's approach cannot explain the processes that allow our percepts to be veridical. Post-Fechnerian schools {(Helmholtzian}, Structural, Gestalt and Gibsonian) have tried to deal with this problem, but have not been successful. An alternative to the Fechnerian approach is required. This paper describes an alternative that has been developing over the last 20 years within the computer vision community. It treats perceptual interpretation as a solution of an inverse problem that depends critically on the operation of a priori constraints. Contemporary research, which adopted this approach, has concentrated on verifying the usefulness of Bayesian and standard regularization methods. This paper takes the next step; it discusses theoretical and empirical aspects of studying human perception as an inverse problem. It reviews the literature that illustrates the power of the inverse problem approach. This review leads to the suggestion that progress in the study of perception will benefit if the inverse approach were to be adopted by experimentalists, as well as by the computational modelers, who have been actively exploring its potential to date.},
+	number = {24},
+	urldate = {2012-11-29},
+	journal = {Vision Research},
+	author = {Pizlo, Zygmunt},
+	month = nov,
+	year = {2001},
+	keywords = {Bayes' rule, Inverse problems, Likelihood, Regularization, Simplicity},
+	pages = {3145--3161},
+	file = {ScienceDirect Snapshot:/Users/permar/Library/Application Support/Firefox/Profiles/uepzkl8i.default/zotero/storage/S6ZHJ8N2/S0042698901001730.html:text/html}
 }
